--- a/Lesson 1.2
+++ b/Lesson 1.2
@@ -1,12 +1,18 @@
 Basic Variables and Data Types
 
-Cool Uses for Codinbg
+Objectives:
+-Introduce relevant uses for coding
+-Continue showing variables and data types
+-Introduce assignment of variables
+-Introduce operators
+
+
+Cool Uses for Coding
 -ChapGPT
 https://www.youtube.com/watch?v=AXn2XVLf7d0
 -Artificial Intelligence
 -Sneaker Drop bots
 -Instagram Bots
--find broken tools that kids can iso.
 
 Variables and Data Types
 These are data types(below), they allow your program to follow parameters predetermined in the code. The basic Data Types are String, integer , 
@@ -30,10 +36,16 @@ Here is a good way to check your data type if you're not sure:
 x = 5
 print(type(x))
 
+At some point you will usually lose track of things like this and it helps to quicly check.  There are planty of other methods, built in, that are just 
+like this.  Many have to do with manipulating data and can easily be demonstrated.  Methods are pre made instructions so you do not have to code them
+yourself.
+
 List:
 A list allows you to store information in a structure where they are seperated but easily accessible. Items in a list do not need to have the same 
 data type.  
 fruitList = ["apple", "banana", "cherry"]
+
+List methods: https://www.w3schools.com/python/python_ref_list.asp
 
 Variable Assignment 
 To give a variable a value it must be assigned, or you don’t have to assign a variable at all(just remember to later if necessary).
