--- a/Lesson 1.2
+++ b/Lesson 1.2
@@ -7,7 +7,7 @@ Objectives:
 -Introduce operators
 
 
-Cool Uses for Coding
+Relevant Uses for Coding
 -ChapGPT
 https://www.youtube.com/watch?v=AXn2XVLf7d0
 -Artificial Intelligence
