--- a/Lesson 3.2
+++ b/Lesson 3.2
@@ -15,6 +15,9 @@ https://www.w3schools.com/python/ref_func_print.asp
 https://www.youtube.com/watch?v=fbaSAS9DWZw
 #This video has basic method usage in it with some examples for you.
 
+https://www.youtube.com/watch?v=2n3EDW31n-s
+#User input video(start 0:45 sec)
+
 *There is after school coding tutoring in Mr.Barretts class Tuesdays and Thursdays*
 
 Basic Method breakdown:
