--- a/Lesson 4.1
+++ b/Lesson 4.1
@@ -1,1 +1,81 @@
+Objectives:
+-Watch methods YouTube video
+-Key Words?
+-Review Conditions and input
+
+Do Now:
+Take user input for what their favorite color is.
+A link to help: https://www.w3schools.com/python/ref_func_input.asp
+
+Method Video
+
+https://www.youtube.com/watch?v=fbaSAS9DWZw
+#This video has basic method usage in it with some examples for you.
+
+*There is after school coding tutoring in Mr.Barretts class Tuesdays and Thursdays*
+
+Python Key words:
+Key words are built in to do things for you, like “if” or “else”
+
+If
+Else
+Elif
+True
+False
+https://www.w3schools.com/python/python_ref_keywords.asp
+
+-Key words are reserved for a specific purpose and they will be a different color from the rest of the text
+-Click the link above to see more of the key words
+
+Keyword Example:
+
+ExNumber = input("Enter info here: ")
+
+#ex 1
+if ExNumber is greater than 10:
+  print("ExNumber is greater")
+else:
+  print("ExNumber is less")
+#Explanation:
+#"is" is a python key word
+#and a comparison is done with a < or > symbol
+
+#ex2
+if "ExNumber is greater than 10":
+  print("ExNumber is greater")
+else:
+  print("ExNumber is less")
+#Explanation:
+#"is" is a python key word
+#comparison is done with < or >
+#comparisons shouldnt be in "" since it is not a string
+
+#ex3
+if ExNumber is > 10:
+  print("ExNumber is greater")
+else:
+  print("ExNumber is less")
+#Explanation:
+#"is" is a python key word, not for this purpose
+
+#solution
+if ExNumber > 10:
+  print("ExNumber is greater")
+else:
+  print("ExNumber is less")
+
+#Explanation
+#simplistic
+#right comparison used 
+
+
+
+
+
+
+
+
+
+
+
 
